# json_serializer

./: CMakeLists.txt
src/: CMakeLists.txt
src/serialization/: json_serializer.hpp  serializer.hpp  traits.hpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  serialization.cpp
